src-tauri/error.log
    Checking yournal v0.1.0 (C:\Folder_D\DANU\situs\Yournal\src-tauri)
warning: unused import: `std::env`
 --> src\oauth.rs:3:5
  |
3 | use std::env;
  |     ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Manager`
 --> src\oauth.rs:4:24
  |
4 | use tauri::{AppHandle, Manager, Emitter};
  |                        ^^^^^^^

warning: unused import: `Serialize`
 --> src\drive_api.rs:3:26
  |
3 | use serde::{Deserialize, Serialize};
  |                          ^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `urlencoding`
  --> src\drive_api.rs:25:86
   |
25 |     let url = format!("https://www.googleapis.com/drive/v3/files?q={}&spaces=drive", urlencoding::encode(query));
   |                                                                                      ^^^^^^^^^^^ use of unresolved module or unlinked crate `urlencoding`
   |
   = help: if you wanted to use a crate named `urlencoding`, use `cargo add urlencoding` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
warning: `yournal` (lib) generated 3 warnings
error: could not compile `yournal` (lib) due to 1 previous error; 3 warnings emitted
